Improved artist searching.  Viewed Venues section.  Shuffle issues improved.

--- a/spotify-app/css/venueradio.css
+++ b/spotify-app/css/venueradio.css
@@ -2,3 +2,12 @@
 .hide {
   display: none !important;
 }
+
+/*
+ *  Venue Event Listing 
+ */
+/* line 11, ../scss/venueradio.scss */
+.performer-link.no-data {
+  color: gray;
+  text-decoration: none;
+}
