--- a/spotify-app/scss/venueradio.scss
+++ b/spotify-app/scss/venueradio.scss
@@ -2,3 +2,14 @@
 .hide {
   display: none !important;
 }
+
+/*
+ *  Venue Event Listing 
+ */
+
+.performer-link {
+  &.no-data { 
+    color: gray; 
+    text-decoration: none;
+  }
+}
