images added to event listing

--- a/spotify-app/scss/venueradio.scss
+++ b/spotify-app/scss/venueradio.scss
@@ -178,7 +178,7 @@ $actions-width: 100px;
 .performer-photo {
   width: 60px;
   height: 60px;
-  border: thin solid $black;
+  // border: thin solid $black;
   margin: 0 $margin-standard 0 0;
 }
 .performer-info {
